@@ -852,6 +852,7 @@ ROW   |23630 |3   |                 |                                           
 ROW   |23631 |3   |                 |                                                           |10091 |Datastore discovery                                              |vmware.hv.datastore.discovery[{$URL},{HOST.HOST}]                              |3600 |90     |0     |0     |4         |             |        |0         |0    |                   |0                   |                     |                     |       |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |1    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23632 |3   |                 |                                                           |10091 |Average read latency of the datastore $3                         |vmware.hv.datastore.read[{$URL},{HOST.HOST},{#DATASTORE},latency]              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23633 |3   |                 |                                                           |10091 |Average write latency of the datastore $3                        |vmware.hv.datastore.write[{$URL},{HOST.HOST},{#DATASTORE},latency]             |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |2    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
+ROW   |23667 |3   |                 |                                                           |10091 |Health state rollup                                              |vmware.hv.sensor.health.state[{$URL},{HOST.HOST}]                              |60   |90     |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |13        |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |NULL       |    |The host health state rollup sensor value: gray - unknown, ok, red - it has a problem, yellow - it might have a problem.                                                                                                                                                                                                                                                                                                                  |0             |30      |0                  |0                  |                  |0       |
 ROW   |23634 |5   |                 |                                                           |10047 |Zabbix vmware cache, % free                                      |zabbix[vmware,buffer,pfree]                                                    |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23636 |16  |                 |                                                           |10082 |jvm Name                                                         |jmx["java.lang:type=Runtime",VmName]                                           |3600 |7      |0     |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
 ROW   |23637 |16  |                 |                                                           |10082 |os Process CPU Load                                              |jmx["java.lang:type=OperatingSystem",ProcessCpuLoad]                           |60   |7      |365   |0     |0         |             |%       |1         |0    |                   |0                   |                     |                     |100    |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |0       |
@@ -3085,6 +3086,7 @@ ROW   |5885     |179          |23663 |
 ROW   |5886     |345          |23664 |
 ROW   |5887     |412          |25330 |
 ROW   |5888     |418          |25365 |
+ROW   |5889     |418          |23667 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue                              |
